fix: links is unreadable

--- a/src/assets/default.css
+++ b/src/assets/default.css
@@ -75,7 +75,6 @@ p {
 }
 a {
   color: #005577;
-  text-decoration-thickness: 2px;
 }
 
 strong {
